--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,108 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    text-align: center;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.myMap {
+    height: 40vh;
+    width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fixed-layer-plate {
+    width: 100%;
+    margin: 0 0 10px;
+    padding: 5px 0;
+    height: fit-content;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.layer-title {
+    font-weight: 700;
+}
+
+.fixed-layer-plate .legend-items-container {
+    width: 85%;
+}
+
+.layer-subtitle {
+    text-align: center;
+    font-size: 0.82em;
+    padding: 2px;
+    position: relative;
+}
+
+.legend-items-container {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    width: 100%;
+    justify-content: center;
+}
+
+.legend-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;
+    font-size: 0.8em;
+    font-weight: 600;
+}
+
+.esriSFSSolid {
+    width: 100%;
+    height: 16px;
+    box-sizing: border-box;
+    margin: 22px 0 60px;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+/* Part of this style will apply for smaller viewports only. See media query at end of file.  */
+.esriSFSSolid::after {
+    content: ""; /* Property will be unset for larger viewports*/
+    height: 10px;
+    width: 10px;
+    background: transparent;
+    display: block;
+    position: absolute;
+    border-left: 1px solid black;
+    left: 50%;
+    top: 100%;
+}
+
+/* Part of this style will apply for smaller viewports only. See media query at end of file.  */
+.legend-item-label {
+    width: fit-content;
+    white-space: nowrap;
+    position: absolute;
+    top: 20px;
+    right: 53%; /* Property will be unset for larger viewports*/
+    transform: rotate(-35deg); /* Property will be unset for larger viewports*/
+    transform-origin: right;
+}
+
+@media (min-width: 800px) {
+    .fixed-layer-plate .esriSFSSolid::after {
+        content: unset;
+    }
+    .fixed-layer-plate .legend-item-label {
+        transform: unset;
+        right: unset;
+    }
 }
