--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,15 @@
 .App {
-    text-align: center;
+    padding: 1rem;
+    background-color: rgb(245, 245, 245);
 }
 
-.App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+.sheet {
+    margin: 0 auto;
+    max-width: 1500px;
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+        0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 
 .myMap {
@@ -21,7 +20,7 @@
 .fixed-layer-plate {
     width: 100%;
     margin: 0 0 10px;
-    padding: 5px 0;
+    padding: 15px 0 5px;
     height: fit-content;
     box-sizing: border-box;
     display: flex;
